<?xml version="1.0"?>
<package>
  <name>laserscan_to_pointcloud</name>
  <version>0.0.0</version>
  <description>The laserscan_to_pointcloud package</description>

  <maintainer email="antonimartorelltorres@gmail.com">Antoni Martorell</maintainer>

  <license>BSD</license>

  <author email="antonimartorelltorres@gmail.com">Antoni Martorell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>